And search page and show ticker data on the same page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 polygon.api.key=VLAI5yoiZMYKr4mZ4hTuMGczB9nHL5X8
 
 # Server Port (default is 8080)
-server.port=8081
+server.port=8080
+
+spring.resources.static-locations=classpath:/static/
+spring.web.resources.add-mappings=true
